--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "react": "16.6.1",
     "react-native": "0.57.5",
     "react-native-banner-carousel": "^1.0.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-radio-buttons-group": "^1.0.7",
+    "react-native-ui-kitten": "^3.1.2",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.2"
   },
